<resources>
    <string name="app_name">ChoppingBlock</string>
    <string name="action_settings">Settings</string>
    <string name="prices_name">Prices</string>
    <string name="alerts_name">Alerts</string>
    <string name="report_name">Report</string>
    <string name="settings_name">Settings</string>
    <string name="bitcoin_name">Bitcoin (BTC)</string>
    <string name="ethereum_name">Ethereum (ETH)</string>
    <string name="litecoin_name">Litecoin (LTC)</string>
    <string name="motd_name">Message of the Day</string>
    <string name="motd_date_name">27 March 2018</string>
    <string name="motd_author_name">Author: Bryan</string>
    <string name="motd_content_name">Use an exchange, not a broker. You’ll save money on fees. For example, buy and sell with GDAX and not Coinbase."</string>
    <string name="motd_content_name2">No Connection"</string>

</resources>
