<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dogan.choppingblock.Activity1"
    android:id="@+id/activity_3_view">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"></include>

    <android.support.v7.widget.ActionMenuView
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/color3"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/motd_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Expert Advice"/>

    <TextView
        android:id="@+id/motd_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motd_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/motd_date_name" />

    <TextView
        android:id="@+id/motd_author_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motd_date_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/motd_author_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/motd_content_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/butt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:background="@color/color2"
        android:text="Refresh" />

</RelativeLayout>
